# mqtpp

./: CMakeLists.txt  README.md
src/Backend/: .env  MongoDBManager.cpp  main.cpp  util.cpp  util.h
src/Backend/Model/: Unit.cpp  Unit.h
